# calista

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  cr.toml  mkdocs.yml  pyproject.toml  pytest.ini  rename.sh
.github/: commit_scopes.md
.github/workflows/: ci.yml  commit_scopes.md  import-linter.yml  mutation.yml  tests.yml
alembic/: env.py
alembic/versions/: be411457bc58_create_event_store.py
docs/: index.md
docs/adr/: 0001-use-event-sourcing.md  0002-cas-file-store.md
docs/dev/: gen_api_nav.py  index.md  tooling.md
docs/dev/adr/: 0002-cas-file-store.md  0003-database.md  0004-schema-migrations.md  0005-event-store.md  0006-event-envelope.md  0007-identifiers.md  0008-concurrency-and-versioning.md  0009-timekeeping.md  0010-retention-and-archival.md  0011-filestore-integration.md  0012-domain-vs-integration-events.md  0013-querying-and-projections.md  0014-eventstore-testing-strategy.md  0015-mutation-testing-policy.md  0016-adopt-mutmut-for-mutation-testing.md  0017-remove-mutation-testing-from-ci.md  0018-adopt-hexagonal-package-structure.md  0019-introduce-interfaces-and-bootstrap-layers.md  0020-eventstore-append-return-semantics.md  0021-eventstore-errors-and-read-behavior.md  0022-logging-and-flight-recorder.md  0023-introduce-utils-subpackage-for-cross-cutting-helpers.md  0024-simplified-cas-filestore.md  0025-refine-filestore-responsibilities.md
docs/dev/architecture/: layered_architecture.md
docs/dev/db/: eventstore_schema.md  migrations.md
docs/dev/testing/: eventstore.md  overview.md
docs/styles/: typography.css
docs/user/: index.md
docs/user/cli/: db.md
docs/user/install/: database.md
src/calista/: __init__.py  bootstrap.py  config.py  logging.py
src/calista/adapters/: __init__.py  filestore.py  id_generators.py  image_repository.py  redactor.py  unit_of_work.py
src/calista/adapters/catalog/: memory_base.py  memory_store.py
src/calista/adapters/db/: dialects.py  sa_types.py
src/calista/adapters/eventstore/: memory.py  schema.py  stream_index.py
src/calista/adapters/exposure_index/: __init__.py  in_memory.py
src/calista/adapters/filestore/: api.py  interface.py  local.py  memory.py
src/calista/bootstrap/: __init__.py  bootstrap.py
src/calista/cli/: db.py  docs_cmds.py  main.py
src/calista/cli/helpers/: __init__.py  db_url.py  messages.py
src/calista/domain/: __init__.py  commands.py  errors.py  events.py  model.py  utils.py  value_objects.py
src/calista/domain/aggregates/: __init__.py  base.py  observation_session.py  raw_fits_file.py
src/calista/entrypoints/: __init__.py
src/calista/entrypoints/cli/: db.py  main.py
src/calista/image/: ccd_image.py
src/calista/infrastructure/db/: dialects.py  engine.py  metadata.py  sa_types.py
src/calista/interfaces/: __init__.py  eventstore.py  filestore.py  id_generator.py  raw_file_registry.py  redactor.py  stream_index.py  unit_of_work.py
src/calista/interfaces/catalog/: __init__.py  base.py  errors.py  facility_catalog.py  instrument_catalog.py  site_catalog.py  telescope_catalog.py  unsettable.py
src/calista/interfaces/exposure_index/: __init__.py  errors.py  exposure_index.py
src/calista/interfaces/stream_index/: __init__.py  errors.py  stream_index.py
src/calista/service_layer/: __init__.py  commands.py  handlers.py  messagebus.py  unit_of_work.py
src/calista/service_layer/handlers/: __init__.py  catalog_handlers.py  observation_session_handlers.py
src/calista/service_layer/repositories/: __init__.py  errors.py  event_mapper.py  event_sourced.py
src/calista/utils/: __init__.py
tests/: __init__.py  conftest.py  test_sanity.py
tests/contract/: __init__.py  conftest.py
tests/contract/catalog/facility/: conftest.py  test_facility_catalog.py
tests/contract/catalog/instrument/: conftest.py  test_instrument_catalog.py
tests/contract/catalog/shared/: versioned_catalog_base.py
tests/contract/catalog/site/: conftest.py  test_site_catalog.py
tests/contract/catalog/telescope/: conftest.py  test_telescope_catalog.py
tests/contract/eventstore/: conftest.py  test_eventstore_core.py
tests/contract/exposure_index/: test_exposure_index.py
tests/contract/filestore/: conftest.py  test_filestore.py  test_filestore_concurrency.py  test_filestore_core.py  test_filestore_large.py  test_filestore_paths_streams.py
tests/contract/id_generator/: conftest.py  test_id_generator_core.py  test_id_generator_monotonic.py
tests/contract/stream_index/: test_stream_index_concurrency.py  test_stream_index_core.py
tests/e2e/frontend/cli/: conftest.py  test_cli_main_options.py
tests/fixtures/: datagen.py  postgres.py  sqlite.py
tests/functional/: __init__.py  conftest.py  test_db_onboarding.py  test_new_user_help.py
tests/functional/frontend/cli/: test_db_onboarding.py  test_new_user_help.py
tests/helpers/: __init__.py  time_asserts.py
tests/integration/: __init__.py  conftest.py  test_bootstrap.py  test_event_store_append_only.py  test_event_store_schema.py  test_migrations_roundtrip_pg.py  test_migrations_roundtrip_sqlite.py  test_utcdatetime_nullable_roundtrip_and_filters.py
tests/integration/adapters/db/: test_migrations_roundtrip_pg.py  test_migrations_roundtrip_sqlite.py  test_utcdatetime_nullable_roundtrip_and_filters.py
tests/integration/adapters/eventstore/: test_sqlalchemy_eventstore.py  test_sqlalchemy_stream_index.py
tests/property/: test_filestore_props.py
tests/unit/: __init__.py  conftest.py  test_cli_helpers.py  test_domain_events.py  test_handlers.py  test_image_agg.py  test_message_bus.py
tests/unit/adapters/: test_utcdatetime.py
tests/unit/cli_helpers/: test_cli_helpers.py  test_messages.py
tests/unit/domain/: test_aggregate_base.py  test_errors.py  test_observation_session.py  test_raw_fits_file.py  test_unknown_event.py  test_utils.py
tests/unit/filestore/: test_memory_store.py
tests/unit/image/: test_ccdimage.py
tests/unit/infrastructure/: test_engine.py  test_metadata.py  test_utcdatetime.py
tests/unit/interfaces/: test_event_envelope.py
tests/unit/service_layer/: test_messagebus.py
(+63 files in other folders)
