[project]
name = "calista"
version = "0.1.0"
description = "CALISTA: A Traceable Pipeline for CCD Photometry and Spectroscopy"
authors = [
    {name = "mhallum",email = "mkhallum92@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [{ include = "calista", from = "src" }]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "click-extra (==5.0.2)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
]

[project.scripts]
calista = "calista.cli.main:calista"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.8"
ruff = "^0.12.8"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pytest-cov = "^6.2.1"
freezegun = "^1.5.5"
hypothesis = "^6.138.2"
griffe-inherited-docstrings = "^1.1.1"
mkdocs-literate-nav = "^0.6.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-exclude = "^1.0.2"
mutmut = "^3.3.1"
alembic = "^1.16.5"
pytest-dotenv = "^0.5.2"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.17"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
pymdown-extensions = "^10.16.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
files = ["src", "tests"]


[[tool.mypy.overrides]]
module = ["rich.*", "sqlalchemy.*"]
ignore_missing_imports = true

[tool.ruff]
target-version="py313"
exclude=["docs"]

[tool.ruff.lint.isort]
known-first-party = ["calista"]

[tool.mutmut]
paths_to_mutate = [ "src/" ]
tests_dir = [ "tests/" ]
