[project]
name = "calista"
version = "0.1.0"
description = "CALISTA: A Traceable Pipeline for CCD Photometry and Spectroscopy"
authors = [
    {name = "mhallum",email = "mkhallum92@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [{ include = "calista", from = "src" }]
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "click-extra (==5.0.2)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
]

[project.scripts]
calista = "calista.cli.main:calista"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pylint = "^3.3.8"
ruff = "^0.12.8"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pytest-cov = "^6.2.1"
freezegun = "^1.5.5"
hypothesis = "^6.138.2"
mutmut = "^3.3.1"
pytest-dotenv = "^0.5.2"
testcontainers = "^4.12.0"
types-docker = "^7.1.0.20250907"
types-requests = "^2.32.4.20250809"
types-psycopg2 = "^2.9.21.20250809"
types-pexpect = "^4.9.0.20250809"
types-docutils = "^0.22.0.20250822"
types-pygments = "^2.19.0.20250809"
types-pyyaml = "^6.0.12.20250822"
types-boltons = "^25.0.0.20250822"
types-tabulate = "^0.9.0.20241207"
types-xmltodict = "^0.15.0.20250907"



[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.17"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
pymdown-extensions = "^10.16.1"
mkdocs-mermaid2-plugin = "^1.2.2"
griffe-inherited-docstrings = "^1.1.1"
mkdocs-literate-nav = "^0.6.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-exclude = "^1.0.2"
mkdocs-click = "^0.9.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "functional: mark test as functional",
    "unit: mark test as unit",
    "integration: mark test as integration",
    "slow: mark test as slow"
]
filterwarnings = [
    "ignore:'MultiCommand' is deprecated:DeprecationWarning:cloup"
]

[tool.coverage.run]
branch = true
source = ["calista"]
omit = [
  "src/calista/infrastructure/db/alembic/versions/*",
  "src/calista/infrastructure/db/alembic/env.py"
]

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"] # src/ layout
files = ["src", "tests"]
exclude=["^docs/"]
plugins = ["sqlalchemy.ext.mypy.plugin"]  # improves SA typing
warn_unused_ignores = true
# Be strict where it matters
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[mypy-docker]
ignore_missing_imports = true


# Focused “missing import” ignores for 3rd party libs with weak stubs
[[tool.mypy.overrides]]
module = [
  "pytest",
  "alembic",
  "alembic.*",
  "testcontainers",
  "testcontainers.*",
  "rich.*",
  "docker",
  "click",
  "click.*",
  "click_extra"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def"]


[tool.ruff]
target-version="py313"
exclude=["docs"]

[tool.ruff.lint.isort]
known-first-party = ["calista"]

[tool.mutmut]
paths_to_mutate = [ "src/" ]
tests_dir = [ "tests/" ]
